--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,12 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.2.*"
+        "illuminate/contracts": "5.0.*",
+        "illuminate/database": "5.0.*",
+        "illuminate/http": "5.0.*",
+        "illuminate/routing": "5.0.*",
+        "illuminate/support": "5.0.*",
+        "illuminate/validation": "5.0.*"
     },
     "autoload": {
         "psr-4": {
